--- a/fateme.html
+++ b/fateme.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    1
+    <header>hey</header>
+    <main>
+        <h1>
+            hello
+        </h1>
+        <p>
+            it's a paragraph
+        </p>
+    </main>
 </body>
 </html>
